--- a/B.A.Y.html
+++ b/B.A.Y.html
@@ -5,7 +5,8 @@
          <link href="B.A.Y.css" rel="stylesheet" type="text/css">
         </head>
         <body> 
-        <em><h1> Bay Area Youth Magazine </h1></em>
+            <em><h1> <span>Bay</span> Area <span>Youth</span> Magazine </h1></em>
+            
   <p><b><h2>Welcome Creatives! We are B.A.Y ! </h2></b> </p>
     <p><h3>B.A.Y is an opportunity for bay area based artists to enter in magazine issues. Giving a way to publish their work for <i>free</i>! </h3> 
 <img src="images/balloon.jpg">
@@ -13,3 +14,6 @@
 <a href="https://www.instagram.com/bayareayouthzine/" target="_blank"> instagram</a>
         </body>
    </html>
+    
+
+   
